feat: nuevo endpoint de registro de usuarios /auth/register y soporte multiformato de fecha
